Add benchmarks for Exeris Community TLS engine and related utilities
- Introduce `ExerisCommunityTlsBenchmark` for measuring TLS 1.3 record path performance.
- Add `ExerisCommunityTlsRoundTripBenchmark` for full roundtrip measurement including kernel crossings.
- Implement `PhaseMarkerEvent` for JMH measurement iteration tracking.
- Enhance `AbstractCommunityTlsBenchmark` with setup and teardown hooks for resource management.
- Update `pom.xml` to include async-profiler dependency for CPU flame graph profiling.
- Modify existing benchmarks to utilize `-XX:+PreserveFramePointer` for accurate profiling.